fix stupid contrast error

--- a/public/css/index.css
+++ b/public/css/index.css
@@ -47,6 +47,7 @@ main {
         background-color: var(--lightblue); padding: 1rem; border-radius: 1.75rem;
         margin: 0; max-width: 15rem;
         img { width: 100%; height: 100%; border-radius: 1rem; }
+        a { color: var(--pink) !important; }
       }
     }
   }
